# skeleton-pyspark

./: .gitignore  HOWTO.rst  Makefile  README.rst  changelog.rst  docker-compose.yml  pyproject.toml  run.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  howto.yml
docker/: package_dependency.Dockerfile
docs/: Makefile
docs/source/: conf.py  extract.rst  howto_link.rst  index.rst  load.rst  modules.rst  transform.rst
src/: __init__.py
src/jobs/: __init__.py  extract.py  load.py  main.py  transform.py
src/jobs/utils/: __init__.py  general.py  log_utils.py
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_transform.py
tests/jobs/: __init__.py  conftest.py  test_transform.py
tests/unit/: __init__.py  conftest.py  test_logger.py  test_main.py
