[tool.poetry]
name = "src"
version = "0.2.2"
description = "An opinionated project skeleton for a Pyspark based data pipeline."
authors = ["Dataroots <info@dataroots.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pyspark = "^3.1.2"
coverage = "^6.1"
black = "^21.10b0"
bandit = "^1.7.1"
flake8-annotations = "^2.7.0"
flake8-docstrings = "^1.6.0"
mypy = "^0.910"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
